# actixStudy

./: .gitignore  README.md
s1/: Cargo.toml
s1/http/src/: httprequest.rs  httpresponse.rs
s1/httpServer/: Cargo.toml
s1/httpServer/src/: handler.rs  main.rs  router.rs  server.rs
s1/src/: main.rs
s1/tcpclient/src/: main.rs
s1/tcpserver/src/: main.rs
s2_ws/: README.md
s2_ws/webservice/: Cargo.toml
s2_ws/webservice/src/: handlers.rs  main.rs  middleware.rs  result.rs  state.rs
s3_pgsql/: .env  Cargo.toml  README.md  db.sql
s3_pgsql/src/: main.rs
s4_actix_pgsql/: Dockerfile
s4_actix_pgsql/webservice/: .env  Cargo.toml
s4_actix_pgsql/webservice/src/: db_access.rs  handlers.rs  main.rs  result.rs  routers.rs
s5_unified_error/: README.md
s5_unified_error/webservice/src/: db_access.rs  middleware.rs  state.rs
s6_refactoring/: Cargo.toml  db.sql
s6_refactoring/webservice/: Cargo.toml
s6_refactoring/webservice/src/: handlers.rs  main.rs  routers.rs
s6_refactoring/webservice/src/dbaccess/: course.rs  teacher.rs
s6_refactoring/webservice/src/handlers/: course.rs  teacher.rs
s6_refactoring/webservice/src/models/: teacher.rs
s6_refactoring_sea_orm/: Cargo.toml  Dockerfile  README.md  db_new.sql
s6_refactoring_sea_orm/webservice/: Cargo.toml
s6_refactoring_sea_orm/webservice/src/: error.rs  routers.rs  state.rs
s6_refactoring_sea_orm/webservice/src/dbaccess/: course.rs  mod.rs  teacher.rs
s6_refactoring_sea_orm/webservice/src/handlers/: course.rs  general.rs  teacher.rs
s6_refactoring_sea_orm/webservice/src/middleware/: auth.rs  mod.rs  timedMiddleware.rs
s6_refactoring_sea_orm/webservice/src/models/: course.rs  mod.rs  prelude.rs  teacher.rs
s7_tera/: README.md  db_new.sql
s7_tera/webapp/src/: handlers.rs  mod.rs  models.rs  result.rs  routers.rs
s7_tera/webapp/static/: register.html  teachers.html
s7_tera/webservice/: Cargo.toml
s7_tera/webservice/src/: routers.rs
s7_tera/webservice/src/dbaccess/: teacher.rs
s7_tera/webservice/src/models/: teacher.rs
s8_wasm-game-of-life/: Cargo.toml  LICENSE_MIT
s8_wasm-game-of-life/src/: lib.rs
s9_ws/: .env  Cargo.toml
s9_ws/wasm-client/: Cargo.toml
s9_ws/wasm-client/src/models/: course.rs
s9_ws/webapp/: Cargo.toml
s9_ws/webapp/src/: error.rs
s9_ws/webapp/static/: register.html
s9_ws/webservice/: Cargo.toml
s9_ws/webservice/src/: error.rs
s9_ws/webservice/src/dbaccess/: course.rs
s9_ws/webservice/src/handlers/: course.rs  teacher.rs
