[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.6.0"
actix-web = "4.0.0"
awc = "3.1.1"
dotenv = "0.15.0"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.104"
tera = "1.19.0"
# 日志相关
log = "0.4.0"
env_logger = "0.10.0"
chrono = { version = "0.4.19", features = ["serde"] }